[help-snippets] Added default height for videos to prevent jumping of the popover

--- a/src/help/editor.scss
+++ b/src/help/editor.scss
@@ -56,6 +56,7 @@
 		z-index: 2;
 		margin: 0 -16px 8px;
 		min-width: calc(100% + 32px);
+		min-height: 163.5px;
 	}
 	.ugb-help-tooltip-video__link {
 		text-align: right;
